# ibis-stream

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: checks-reusable.yml  checks.yml  dependency-matrix.yml  lint.yml  publish.yml  release.yml
scripts/: integration.py
src/ibis_stream/: __init__.py
src/ibis_stream/bigquery/: __init__.py
tests/integration/bigquery/: test_live.py  test_smoke.py
tests/unit/bigquery/: test_insert.py
